--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,28 @@
 .cfg/
+out/
+.idea/
+.idea_modules/
+.DS_Store
+target/
+dist/*
+target/
+lib_managed/
+src_managed/
+project/boot/
+project/plugins/project/
+.history
+.cache
+.lib/
+*.class
+*.log
+*.iml
+*.ipr
+*.iws
+bin/
+libexec/
+logs/
+project/*-shim.sbt
+project/project/
+project/target/
+.scala_dependencies
+.worksheet
